--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: Bada Blog
 
 # Your name to show in the footer
-author: Some Person
+author: James Sopkin
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - Lambda School: "https://lambdaschool.com"
+    - Python documentaion: "https://docs.python.org/3/"
+  Author's home: "https://badabad-dashboard.github.io"
 
 # --- Logo --- #
 
@@ -34,12 +34,12 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "jamessopkin@gmail.com"
+  #facebook: James Sopkin
+  github: badabad
+  #twitter: daattali
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: James Sopkin
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -58,7 +58,7 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: This website is a virtual proof that I'm awesome
+rss-description: This website is my personal blog and portfolio
 
 # --- General options --- #
 
@@ -83,7 +83,7 @@ excerpt_length: 50
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
+navbar-col: "#18b2c9"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
