--- a/_config.yml
+++ b/_config.yml
@@ -86,11 +86,11 @@ excerpt_length: 50
 navbar-col: "#18b2c9"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
+page-col: "#18b2c9"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#EAEAEA"
+footer-col: "#18b2c9"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
