--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ excerpt_length: 50
 navbar-col: "#18b2c9"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-page-col: "#18b2c9"
+page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
